<resources>
    <string name="app_name">ShopOnTheGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello cart fragment</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="donothavaaccount">Don\'t have an account?</string>
    <string name="Createanewaccount">Create a new account</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="g_color">Color</string>
    <string name="g_size">Size</string>
    <string name="g_please_select_color">Please select color</string>
    <string name="g_please_select_size">Please select size</string>
    <string name="forgetpasswod">Did you forget the password?</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome !</string>
    <string name="pleaseloginorsignuptocontuinieourapp">Please login or sign up to continue our app</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="SignIn">Sign in</string>
    <string name="DoYouhaveAnAccout">Do You have An Accout</string>
    <string name="continuewithgoogle">Continue with Google</string>
    <string name="signup">Sign Up</string>
    <string name="createnewaccount">Create an new account</string>
    <string name="username">User Name</string>
    <string name="confrimpassword">confirm Password</string>
    <string name="enteryouremail">Enter Your Email</string>
    <string name="enterusername">Enter Username</string>
    <string name="enterpassword">Enter Password</string>
    <string name="description">Description</string>
    <string name="addtocart">Add To Cart</string>
    <string name="reviews">Reviews</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="delete">Delete</string>
    <string name="google_maps_api_key">AIzaSyAZO_qi1MU0oEo-s8zVGfSS57PQG6acskQ</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loading_dialog_text">Loading..</string>



    <string name="privacy_policy_part">Welcome to Shop On the Go! This Privacy Policy is designed to help you understand how your personal information is collected, used, and shared when you use our mobile application "Shop On the Go" (hereinafter referred to as the "App").</string>

    <string name="privacy_policy_part2">Contact Us:
        Mohamed Nader,
        Mazen Tarek,
        Mohamed Taha
 </string>s



</resources>