<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignUp.View.SignUpActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="309dp"
        android:layout_height="126dp"
        android:layout_marginTop="25dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup"
        android:textColor="#070707"
        android:textSize="@dimen/big_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="287dp"
        android:layout_height="34dp"
        android:text="@string/createnewaccount"
        android:textSize="@dimen/small_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userEditText"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterusername"
        android:inputType="textPersonName"
        app:boxBackgroundColor="#F5F5F5"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxStrokeColor="#40000000"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="#F30202"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameedtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/userEditText"
        app:layout_constraintTop_toBottomOf="@+id/userEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enteryouremail"
        android:inputType="textPersonName"
        app:boxBackgroundColor="#F5F5F5"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="#EA0505"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emaileditText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"
        app:boxBackgroundColor="#F5F5F5"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="#FB0000"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordeditText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confrimpassword"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confrimpasswordEditText"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="@string/enterpassword"
        android:inputType="textPassword"
        app:boxBackgroundColor="#F5F5F5"
        app:boxStrokeColor="@color/white"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:errorTextColor="#D80101"
        app:hintTextColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="@null"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/buttonstyle"

        android:backgroundTintMode="src_in"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confrimpasswordEditText" />
    <LinearLayout
        android:id="@+id/you_user_sign_up_li"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/signup"
        app:layout_constraintRight_toRightOf="@id/signup"
        app:layout_constraintTop_toBottomOf="@id/signup">

        <TextView
            android:id="@+id/you_user_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DoYouhaveAnAccout"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingRight="5dp"
            android:text="@string/SignIn"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>